[metadata]
name = scheduler-weights
summary = Custom OpenStack Scheduler Weights
description-file =
    README.rst
author = IBM
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[pbr]
warnerrors = True

[entry_points]
